changed design, mirrowing google weather app

--- a/index.html
+++ b/index.html
@@ -14,41 +14,60 @@
 
 <body>
     <div class="container">
-        <div class="row">
-            <div class="card text-bg-dark">
-                <img src="/src/clear-sky.jpg" class="card-img" alt="clear sky">
-                <div class="card-img-overlay">
-                    <h5 class="card-title">Munich</h5>
-                    <p class="card-text-day-time">
-                        Placeholder day and time
-                    </p>
-                    <p class="card-text-date">
-                        Placeholder date
-                    </p>
-                    <p class="card-text-summary">
-                        Clear
-                    </p>
-                    <p class="card-text"><small>Last updated 3 mins ago</small></p>
+        <div class="weather-app">
+            <h1>
+                Munich
+            </h1>
+            <ul>
+                <li>
+                    date and time
+                </li>
+                <li>
+                    clear sky
+                </li>
+            </ul>
+            <div class="container text-center">
+                <div class="row-cols-2">
+                    <div class="col"> <img src="/src/sun.jpg" alt="sun icon"> 12°C | °F
+                    </div>
+                    <div class="col">
+                        <ul>
+                            <li>
+                                Precipitation: 0%
+                            </li>
+                            <li>
+                                Humidity: 50%
+                            </li>
+                            <li>
+                                Wind: 2km/h
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+            <div class="row align-items-center">
+                <div class="col">
+                    Morning
+                </div>
+                <div class="col">
+                    Midday
+                </div>
+                <div class="col">
+                    Evening
+                </div>
+                <div class="col">
+                    Night
                 </div>
             </div>
-        </div>
-        <div class="row align-items-center">
-            <div class="col">
-                Morning
-            </div>
-            <div class="col">
-                Midday
-            </div>
-            <div class="col">
-                Evening
-            </div>
-            <div class="col">
-                Night
-            </div>
+            <small>
+                <a href="https://github.com/berniewer/final-weather-app.git"> Open source Code </a>
+                by Bernadette Werner
+            </small>
         </div>
     </div>
 
-    <a href=""></a>
+
     </div>
     <script src="src/app.js">
 
