--- a/index.html
+++ b/index.html
@@ -26,45 +26,45 @@
                     clear sky
                 </li>
             </ul>
-            <div class="container text-center">
-                <div class="row-cols-2">
-                    <div class="col"> <img src="/src/sun.jpg" alt="sun icon"> 12°C | °F
-                    </div>
-                    <div class="col">
-                        <ul>
-                            <li>
-                                Precipitation: 0%
-                            </li>
-                            <li>
-                                Humidity: 50%
-                            </li>
-                            <li>
-                                Wind: 2km/h
-                            </li>
-                        </ul>
-                    </div>
+            <div class="row ">
+                <div class="col-6">
+                    <img src="/src/sun.jpg" alt="sun icon"> 12°C | °F
                 </div>
+                <div class="col-6">
+                    <ul>
+                        <li>
+                            Precipitation: 0%
+                        </li>
+                        <li>
+                            Humidity: 50%
+                        </li>
+                        <li>
+                            Wind: 2km/h
+                        </li>
+                    </ul>
+                </div>
+            </div>
 
-            </div>
-            <div class="row align-items-center">
-                <div class="col">
-                    Morning
-                </div>
-                <div class="col">
-                    Midday
-                </div>
-                <div class="col">
-                    Evening
-                </div>
-                <div class="col">
-                    Night
-                </div>
-            </div>
-            <small>
-                <a href="https://github.com/berniewer/final-weather-app.git"> Open source Code </a>
-                by Bernadette Werner
-            </small>
         </div>
+        <div class="row align-items-center">
+            <div class="col">
+                Morning
+            </div>
+            <div class="col">
+                Midday
+            </div>
+            <div class="col">
+                Evening
+            </div>
+            <div class="col">
+                Night
+            </div>
+        </div>
+        <small>
+            <a href="https://github.com/berniewer/final-weather-app.git"> Open source Code </a>
+            by Bernadette Werner
+        </small>
+    </div>
     </div>
 
 
