--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <script src="https://unpkg.com/axios@1.1.2/dist/axios.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="src/style.css">
@@ -18,26 +18,21 @@
             <div class="weather-app">
                 <div class="overview">
 
-                    <h1>
-                        Munich
-                    </h1>
+                    <h1 id="city"> </h1>
                     <ul>
                         <li>
                             date and time
                         </li>
-                        <li>
-                            clear sky
-                        </li>
+                        <li id="description"></li>
                     </ul>
                 </div>
                 <div class="row ">
                     <div class="col-6">
                         <div class="d-flex weather-temperature">
                             <img src="/src/sun.jpg" alt="sun" id="icon">
+                            <strong id="temperature"></strong>
+                            <span class="units">°C | <a href="">°F</a></span>
                         </div>
-                        <strong id="temperature"> 12
-                        </strong>
-                        <span class="units">°C | <a href="">°F</a></span>
                     </div>
                     <div class="col-6">
                         <ul>
@@ -45,7 +40,7 @@
                                 Precipitation: 0%
                             </li>
                             <li>
-                                Humidity: 50%
+                                Humidity: <span id="humidity"></span> %
                             </li>
                             <li>
                                 Wind: 2km/h
