--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                     <div class="col-6">
                         <ul>
                             <li>
-                                Precipitation: 0%
+                                Feels Like: <span id="feels-like"></span> °
                             </li>
                             <li>
                                 Humidity: <span id="humidity"></span> %
                             </li>
                             <li>
-                                Wind: 2km/h
+                                Wind: <span id="windspeed"></span> km/h
                             </li>
                         </ul>
                     </div>
