--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <h1 id="city"> </h1>
                     <ul>
                         <li>
-                            date and time
+                            Last updated: <span id="date"></span>
                         </li>
                         <li id="description"></li>
                     </ul>
@@ -40,7 +40,7 @@
                                 Feels Like: <span id="feels-like"></span> °
                             </li>
                             <li>
-                                Humidity: <span id="humidity"></span> %
+                                Humidity: <span id="humidity"></span>%
                             </li>
                             <li>
                                 Wind: <span id="windspeed"></span> km/h
