added forecast and padding top

--- a/index.html
+++ b/index.html
@@ -49,22 +49,22 @@
                     </div>
                 </div>
 
-
-                <div class="row align-items-center">
-                    <div class="col">
-                        Morning
-                    </div>
-                    <div class="col">
-                        Midday
-                    </div>
-                    <div class="col">
-                        Evening
-                    </div>
-                    <div class="col">
-                        Night
+                <div class="forecast">
+                    <div class="row align-items-center">
+                        <div class="col">
+                            Morning
+                        </div>
+                        <div class="col">
+                            Midday
+                        </div>
+                        <div class="col">
+                            Evening
+                        </div>
+                        <div class="col">
+                            Night
+                        </div>
                     </div>
                 </div>
-
             </div>
             <small>
                 <a href="https://github.com/berniewer/final-weather-app.git"> Open source Code </a>
