--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
                 </div>
 
-                <div class="forecast">
+                <!--<div class="forecast">
                     <div class="row align-items-center">
                         <div class="col">
                             Morning
@@ -64,7 +64,7 @@
                             Night
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
             <small>
                 <a href="https://github.com/berniewer/final-weather-app.git"> Open source Code </a>
