--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <div class="row ">
                     <div class="col-6">
                         <div class="d-flex weather-temperature">
-                            <img src="/src/sun.jpg" alt="sun" id="icon">
+                            <img src="" alt="sun" id="icon">
                             <strong id="temperature"></strong>
                             <span class="units">°C | <a href="">°F</a></span>
                         </div>
