--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
     <div class="container">
         <div class="weather-app-wrapper">
             <div class="weather-app">
+                <form id="search-form" class="mb-3">
+                    <div class="row">
+                        <div class="col-10">
+                            <input type="search" class="form-control" id="city-input" placeholder="Type a city here..">
+                        </div>
+                        <div class="col-2">
+                            <input type="submit" value="Search" class="btn btn-primary">
+                        </div>
+                    </div>
+                </form>
+
                 <div class="overview">
 
                     <h1 id="city"> </h1>
@@ -31,7 +42,8 @@
                         <div class="d-flex weather-temperature">
                             <img src="" alt="sun" id="icon">
                             <strong id="temperature"></strong>
-                            <span class="units">°C | <a href="">°F</a></span>
+                            <span class="units"> <a href="#" id="celsius-link" class="active">C°</a> | <a href="#"
+                                    id="fahrenheit-link">°F</a></span>
                         </div>
                     </div>
                     <div class="col-6">
