css and html of forecast

--- a/index.html
+++ b/index.html
@@ -61,12 +61,25 @@
                     </div>
                 </div>
 
-                <div class="forecast">
+                <div class="weather-forecast">
                     <div class="row align-items-center">
-                        <div class="col">
-                            Morning
+                        <div class="col-2">
+                            <div class="weather-forecast-day">
+                                Thu
+                            </div>
+                            <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/clear-sky-day.png"
+                                alt="" width="42">
+                            <div class="weather-forecast-temperatures">
+                                <span class="weather-forecast-temperatures-max">
+                                    18°
+                                </span>
+                                <span class="weather-forecast-temperatures-min">
+                                    12°
+                                </span>
+
+                            </div>
                         </div>
-                        <div class="col">
+                        <!--<div class="col">
                             Midday
                         </div>
                         <div class="col">
@@ -74,7 +87,7 @@
                         </div>
                         <div class="col">
                             Night
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
