deleted Farenheit option

--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
                         <div class="d-flex weather-temperature">
                             <img src="" alt="sun" id="icon">
                             <strong id="temperature"></strong>
-                            <span class="units"> <a href="#" id="celsius-link" class="active">C°</a> | <a href="#"
-                                    id="fahrenheit-link">°F</a></span>
+                            <span class="units"> <a class="active">°C</a> </span>
                         </div>
                     </div>
                     <div class="col-6">
@@ -55,7 +54,7 @@
                                 Humidity: <span id="humidity"></span>%
                             </li>
                             <li>
-                                Wind: <span id="windspeed"></span> km/h
+                                Wind: <span id="windspeed"></span> m/h
                             </li>
                         </ul>
                     </div>
